--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,230 +3,149 @@ load_module modules/ngx_http_brotli_static_module.so;
 
 user nginx;
 worker_processes auto;
-worker_rlimit_nofile 65535;
 
 events {
-   worker_connections 65535;
-   use epoll;
-   multi_accept on;
+    worker_connections 8192;
+    use epoll;
+    multi_accept on;
 }
 
 http {
-   include /etc/nginx/mime.types;
-   default_type application/octet-stream;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-   access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
-   error_log /var/log/nginx/error.log warn;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log warn;
 
-   # Основные настройки
-   sendfile on;
-   tcp_nopush on;
-   tcp_nodelay on;
-   keepalive_timeout 65;
-   keepalive_requests 100000;
-   reset_timedout_connection on;
-   client_body_timeout 12;
-   send_timeout 10;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    keepalive_requests 10000;
+    reset_timedout_connection on;
+    client_body_timeout 12;
+    send_timeout 10;
 
-   # Буферизация
-   client_body_buffer_size 16k;
-   client_max_body_size 100m;
-   client_header_buffer_size 1k;
-   large_client_header_buffers 4 8k;
+    open_file_cache max=1000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
 
-   # Кэширование
-   open_file_cache max=2000 inactive=20s;
-   open_file_cache_valid 60s;
-   open_file_cache_min_uses 2;
-   open_file_cache_errors off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
+    ssl_ecdh_curve secp384r1;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_timeout 4h;
+    ssl_buffer_size 8k;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 8.8.8.8 valid=300s;
+    resolver_timeout 5s;
 
-   # SSL
-   ssl_protocols TLSv1.2 TLSv1.3;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-   ssl_ecdh_curve secp384r1;
-   ssl_session_cache shared:SSL:50m;
-   ssl_session_timeout 1d;
-   ssl_session_tickets off;
-   ssl_buffer_size 4k;
-   ssl_stapling on;
-   ssl_stapling_verify on;
-   resolver 1.1.1.1 8.8.8.8 valid=300s;
-   resolver_timeout 5s;
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+    gzip_min_length 1024;
 
-   # Сжатие
-   gzip on;
-   gzip_vary on;
-   gzip_proxied any;
-   gzip_comp_level 6;
-   gzip_types
-       text/plain
-       text/css
-       text/xml
-       text/javascript
-       application/json
-       application/javascript
-       application/x-javascript
-       application/xml
-       application/x-httpd-php
-       application/x-yaml
-       application/yaml
-       image/svg+xml;
-   gzip_min_length 256;
+    brotli on;
+    brotli_comp_level 6;
+    brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml font/woff2;
 
-   # Brotli
-   brotli on;
-   brotli_comp_level 6;
-   brotli_types
-       text/plain
-       text/css
-       text/xml
-       text/javascript
-       application/json
-       application/javascript
-       application/x-javascript
-       application/xml
-       application/x-httpd-php
-       application/x-yaml
-       application/yaml
-       image/svg+xml
-       font/woff2;
+    limit_req_zone $binary_remote_addr zone=one:10m rate=30r/s;
 
-   # Rate limiting
-   limit_req_zone $binary_remote_addr zone=one:10m rate=30r/s;
-   limit_conn_zone $binary_remote_addr zone=addr:10m;
+    server {
+        listen 80;
+        server_name 3-gymnasium.kg www.3-gymnasium.kg;
+        return 301 https://$server_name$request_uri;
+    }
 
-   # HTTP -> HTTPS
-   server {
-       listen 80;
-       listen [::]:80;
-       server_name 3-gymnasium.kg www.3-gymnasium.kg;
-       return 301 https://$server_name$request_uri;
-   }
+    server {
+        listen 443 ssl http2;
+        server_name 3-gymnasium.kg www.3-gymnasium.kg;
+        ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
 
-   # Основной сервер
-   server {
-       listen 443 ssl http2;
-       listen [::]:443 ssl http2;
-       server_name 3-gymnasium.kg www.3-gymnasium.kg;
+        client_max_body_size 100M;
+        client_body_buffer_size 128k;
 
-       ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
-       ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
+        location /static/ {
+            alias /app/staticfiles/;
+            try_files $uri $uri/ =404;
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000, immutable";
+            access_log off;
+        }
 
-       # Security headers
-       add_header X-Frame-Options "SAMEORIGIN" always;
-       add_header X-Content-Type-Options "nosniff" always;
-       add_header Referrer-Policy "no-referrer-when-downgrade" always;
-       add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-       add_header X-XSS-Protection "1; mode=block" always;
-       add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
+        location /media/ {
+            alias /app/media/;
+            try_files $uri $uri/ =404;
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000, immutable";
+            access_log off;
+        }
 
-       # Static files
-       location /static/ {
-           alias /app/staticfiles/;
-           try_files $uri $uri/ =404;
-           expires 1y;
-           add_header Cache-Control "public, max-age=31536000, immutable";
-           access_log off;
-           tcp_nodelay off;
-           open_file_cache max=3000 inactive=120s;
-           open_file_cache_valid 45s;
-           open_file_cache_min_uses 2;
-           open_file_cache_errors off;
-       }
+        location /api/ {
+            limit_req zone=one burst=100 nodelay;
+            proxy_pass http://web:9000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+            proxy_set_header Accept-Encoding "";
+        }
 
-       # Media files
-       location /media/ {
-           alias /app/media/;
-           try_files $uri $uri/ =404;
-           expires 1y;
-           add_header Cache-Control "public, max-age=31536000, immutable";
-           access_log off;
-           tcp_nodelay off;
-           open_file_cache max=3000 inactive=120s;
-           open_file_cache_valid 45s;
-           open_file_cache_min_uses 2;
-           open_file_cache_errors off;
-       }
+        location /accounts/ {
+            proxy_pass http://web:9000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-       # API
-       location /api/ {
-           limit_req zone=one burst=100 nodelay;
-           limit_conn addr 10;
+        location /admin {
+            proxy_pass http://web:9000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-           proxy_pass http://web:9000;
-           proxy_http_version 1.1;
-           proxy_set_header Connection "";
-           proxy_set_header Host $host;
-           proxy_set_header X-Real-IP $remote_addr;
-           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_set_header X-Forwarded-Proto $scheme;
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+            proxy_set_header Accept-Encoding "";
+        }
 
-           proxy_buffering on;
-           proxy_buffer_size 16k;
-           proxy_busy_buffers_size 24k;
-           proxy_buffers 32 8k;
-           proxy_read_timeout 60s;
-           proxy_send_timeout 60s;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        add_header X-XSS-Protection "1; mode=block" always;
 
-           proxy_cache_bypass $http_upgrade;
-           proxy_set_header Accept-Encoding "";
-       }
-
-       # Accounts
-       location /accounts/ {
-           proxy_pass http://web:9000;
-           proxy_set_header Host $host;
-           proxy_set_header X-Real-IP $remote_addr;
-           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_set_header X-Forwarded-Proto $scheme;
-
-           proxy_buffer_size 16k;
-           proxy_buffers 32 8k;
-           proxy_busy_buffers_size 24k;
-           proxy_read_timeout 60s;
-       }
-
-       # Admin
-       location /admin {
-           proxy_pass http://web:9000;
-           proxy_set_header Host $host;
-           proxy_set_header X-Real-IP $remote_addr;
-           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_set_header X-Forwarded-Proto $scheme;
-
-           proxy_buffer_size 16k;
-           proxy_buffers 32 8k;
-           proxy_busy_buffers_size 24k;
-           proxy_read_timeout 300s;
-
-           client_max_body_size 100m;
-       }
-
-       # Frontend
-       location / {
-           proxy_pass http://frontend:3000;
-           proxy_http_version 1.1;
-           proxy_set_header Upgrade $http_upgrade;
-           proxy_set_header Connection "upgrade";
-           proxy_set_header Host $host;
-           proxy_set_header X-Real-IP $remote_addr;
-           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_set_header X-Forwarded-Proto $scheme;
-
-           proxy_buffering on;
-           proxy_buffer_size 16k;
-           proxy_buffers 32 8k;
-           proxy_busy_buffers_size 24k;
-           proxy_read_timeout 60s;
-           proxy_send_timeout 60s;
-
-           proxy_cache_bypass $http_upgrade;
-       }
-
-       # Hidden files
-       location ~ /\. {
-           deny all;
-       }
-   }
+        location ~ /\. {
+            deny all;
+        }
+    }
 }
