--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,24 +2,27 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
-RUN npm install @tanstack/react-query critters
+RUN npm install @tanstack/react-query critters next
 COPY . .
-
-# Отключите оптимизацию CSS в next.config.js
 RUN npm run build
 
 FROM node:18-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV production
+ENV PATH $PATH:/app/node_modules/.bin
+
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
-COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/package-lock.json ./package-lock.json
+
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/package-lock.json ./
 COPY --from=builder /app/next.config.mjs ./
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
 COPY --from=builder /app/node_modules ./node_modules
 
 USER nextjs
 EXPOSE 3000
+ENV PORT 3000
 CMD ["npm", "start"]
