--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,28 +1,37 @@
 FROM node:18-alpine AS builder
+
 WORKDIR /app
-COPY package*.json ./
-RUN npm install --legacy-peer-deps
-RUN npm install @tanstack/react-query critters next
+
+# Копируем файлы зависимостей
+COPY package.json package-lock.json ./
+
+# Устанавливаем зависимости
+RUN npm ci
+
+# Копируем исходники
 COPY . .
+
+# Собираем приложение
 RUN npm run build
 
 FROM node:18-alpine AS runner
+
 WORKDIR /app
+
 ENV NODE_ENV production
-ENV PATH $PATH:/app/node_modules/.bin
+ENV PORT 3000
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/package-lock.json ./
-COPY --from=builder /app/next.config.mjs ./
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
-COPY --from=builder /app/node_modules ./node_modules
+# Копируем необходимые файлы из builder
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/public ./public
 
 USER nextjs
+
 EXPOSE 3000
-ENV PORT 3000
-CMD ["npm", "start"]
+
+# Запускаем сервер
+CMD ["node", "server.js"]
